Se agrego modulo de  codificacion de mensaje

--- a/EjerciciosRazer_HectorEduardo/Pages/Shared/_Layout.cshtml
+++ b/EjerciciosRazer_HectorEduardo/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/IndiceMasaCorporal">IMC</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CodificadorMensaje">Codificador</a>
+                        </li>
                     </ul>
                 </div>
             </div>
