Se agrega Modulo de EvaluarExpresion

--- a/EjerciciosRazer_HectorEduardo/Pages/Shared/_Layout.cshtml
+++ b/EjerciciosRazer_HectorEduardo/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CodificadorMensaje">Codificador</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/EvaluarExpresion">Igualdad</a>
+                        </li>
                     </ul>
                 </div>
             </div>
